--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
-  <title>CloudWorks&trade; | Kodiak Data</title>
+  <title>ZipCache&trade; | Barnstormers, LLC</title>
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/animate.min.css" rel="stylesheet"> 
   
@@ -51,7 +51,7 @@
         <div class="item active wow fadeIn" data-wow-duration="2000ms" data-wow-delay="300ms"
         	style="background-image: url(images/slider/milky-1.jpg)">
           <div class="caption">
-            <h1 class="animated fadeInLeftBig">Introducing <span>Cloudworks&trade;</span> from Kodiak Data</h1>
+            <h1 class="animated fadeInLeftBig">Introducing <span>ZipCache&trade;</span> from Barnstormers</h1>
             <p class="animated fadeInRightBig">300+ data and cloud services - One-click deployment - Personalized repo</p>
             <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">Start now</a>
           </div>
