--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
         	style="background-image: url(images/slider/milky-1.jpg)">
           <div class="caption">
             <h1 class="animated fadeInLeftBig">Introducing <span>ZipCache&trade;</span> from Barnstormers</h1>
-            <p class="animated fadeInRightBig">300+ data and cloud services - One-click deployment - Personalized repo</p>
+            <p class="animated fadeInRightBig">In-line transparent cache for S3</p>
             <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">Start now</a>
           </div>
         </div>  
         
 		<div class="item" ">
           <div class="caption">
-            <h1 class="animated fadeInLeftBig">First <span>app store</span> for data centers</h1>
+            <h1 class="animated fadeInLeftBig">Supports <span>write-through</span> and <span>write-back</span> modes</h1>
             <p class="animated fadeInRightBig">Big-data Stacks - Devops/Production Cloud (Redhat/Mesos/K8S) - Storage services - Databases - Key-Value Stores</p>
             <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">See apps and services</a>
           </div>
