index file changes
...

--- a/index.html
+++ b/index.html
@@ -60,16 +60,15 @@
 		<div class="item" ">
           <div class="caption">
             <h1 class="animated fadeInLeftBig">Supports <span>write-through</span> and <span>write-back</span> modes</h1>
-            <p class="animated fadeInRightBig">Big-data Stacks - Devops/Production Cloud (Redhat/Mesos/K8S) - Storage services - Databases - Key-Value Stores</p>
+            <p class="animated fadeInRightBig">Caches S3 data inside working VPC for re-use - Speeds up writes - Efficient use of high-performance instance SSD</p>
             <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">See apps and services</a>
           </div>
         </div>
 
         <div class="item">
           <div class="caption">
-            <h1 class="animated fadeInLeftBig">Pick from <span>300+ Apps</span> and launch with a click</h1>
-            <p class="animated fadeInRightBig"><strong>Hosted Kodiak Data MemCloud</strong> from $25/week - Faster than AWS<br>
-            <br><strong>Private StorageCloud</strong> from $4k/month - Faster than bare metal</p>
+            <h1 class="animated fadeInLeftBig">Affordable tiers starting from <span>1/2 of a cent per hour</span></h1>
+            <p class="animated fadeInRightBig"><strong>Hosted Kodiak Data MemCloud</strong> from $25/week - Faster than AWS</p>
             <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">Learn more</a>
           </div>
         </div>  
@@ -77,8 +76,8 @@
            <div class="item" >
           <div class="caption">
 
-            <h1 class="animated fadeInLeftBig">Supports <span>MemCloud</span> and <span>Storagecloud</span></h1>
-            <p class="animated fadeInRightBig">Run up to 5X Faster than AWS - At a fraction of the cost - See benchmark details</p>
+            <h1 class="animated fadeInLeftBig">2-node <span>redundant configuration available</span> for high availability</h1>
+            <p class="animated fadeInRightBig">External public with high-speed ingestion - simple policy to retain recent data in cache for minutes/hours/days</p>
             <a data-scroll class="btn btn-start animated fadeInUpBig" href="#Offerings">Start now</a>
           </div>
         </div>
