--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 
         <div class="item">
           <div class="caption">
-            <h1 class="animated fadeInLeftBig">Affordable tiers starting from <span>1/2 of a cent per hour</span></h1>
-            <p class="animated fadeInRightBig"><strong>Hosted Kodiak Data MemCloud</strong> from $25/week - Faster than AWS</p>
+            <h1 class="animated fadeInLeftBig"><span>Affordable</span> tiers starting from <span>1/2 of a cent per hour</span></h1>
+            <p class="animated fadeInRightBig"><strong>7-day free trial | simple installation via AWS marketplace</p>
             <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">Learn more</a>
           </div>
         </div>  
@@ -273,10 +273,10 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-6">
-            <p>&copy; 2017 Kodiak Data, Inc.</p>
+            <p>&copy; 2018 ZipCache by Barnstomers</p>
           </div>
           <div class="col-sm-6">
-            <p class="pull-right"><a href="http://www.kodiakdata.com/">Kodiak Data</a></p>
+            <p class="pull-right"><a href="http://www.zipcache.com/">Barnstormers, LLC</a></p>
           </div>
         </div>
       </div>
