--- a/index.html
+++ b/index.html
@@ -49,13 +49,33 @@
       <div id="outercarousel" class="carousel-inner">
 
         <div class="item active wow fadeIn" data-wow-duration="2000ms" data-wow-delay="300ms"
-        	style="background-image: url(images/slider/milky-1.jpg)">
+        	style="background-image: url(images/slider/arrows-aero1.jpg)">
           <div class="caption">
             <h1 class="animated fadeInLeftBig">Introducing <span>ZipCache&trade;</span> from Barnstormers</h1>
             <p class="animated fadeInRightBig">In-line transparent cache for S3</p>
             <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">Start now</a>
           </div>
         </div>
+
+
+        <div class="item wow fadeIn" style="background-image: url(images/slider/coin-toss.jpg)">">
+                  <div class="caption">
+                    <h1 class="animated fadeInLeftBig"><span>Boost</span> your productivity for <span> less than one cent/hour</span></h1>
+                    <p class="animated fadeInRightBig">7-day free trial | simple installation via AWS marketplace</p>
+                    <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">Learn more</a>
+                  </div>
+        </div>
+
+        <div class="item" ">
+              <div class="caption">
+                <h1 class="animated fadeInLeftBig">Speed up your <span>S3 access by 10X</span> or more!</h1>
+                <p class="animated fadeInRightBig">Docker private hub - Also on Google container registry (soon)</p>
+                <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">See apps and services</a>
+              </div>
+            </div>
+
+
+
 
         <div class="item" ">
               <div class="caption">
@@ -77,7 +97,7 @@
 
         <div class="item" ">
           <div class="caption">
-            <h1 class="animated fadeInLeftBig">Supports <span>Linux deployments</span> on AWS, Azure, VMware or bare-metal</h1>
+            <h1 class="animated fadeInLeftBig">Easy <span>deloyment on Linux</span> in AWS, Azure, VMware or bare-metal</h1>
             <p class="animated fadeInRightBig">Caches S3 data inside  for re-use - Speeds up writes - Can use commodity servers - ARM version coming</p>
             <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">See apps and services</a>
           </div>
@@ -89,16 +109,6 @@
             <h1 class="animated fadeInLeftBig">policy to <span>retain recent data in cache</span> by minutes to days</h1>
             <p class="animated fadeInRightBig">Caches S3 data inside working VPC for re-use - Speeds up writes - Efficient use of high-performance instance SSD</p>
             <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">See apps and services</a>
-          </div>
-        </div>
-
-
-
-        <div class="item">
-          <div class="caption">
-            <h1 class="animated fadeInLeftBig"><span>Affordable</span> tiers starting from <span>1/2 cent</span> an hour</h1>
-            <p class="animated fadeInRightBig">7-day free trial | simple installation via AWS marketplace</p>
-            <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">Learn more</a>
           </div>
         </div>
 
