--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <!--/.preloader-->
 
   <header id="home">
-    <div id="home-slider" class="carousel slide carousel-fade" data-interval="10000" data-ride="carousel">
+    <div id="home-slider" class="carousel slide carousel-fade" data-interval="5000" data-ride="carousel">
 	<ol class="carousel-indicators">
 	    <li data-target="#home-slider" data-slide-to="0" class="active"></li>
 	    <li data-target="#home-slider" data-slide-to="1"></li>
@@ -52,7 +52,7 @@
         	style="background-image: url(images/slider/arrows-aero1.jpg)">
           <div class="caption">
             <h1 class="animated fadeInLeftBig">Introducing <span>ZipCache&trade;</span> from Barnstormers</h1>
-            <p class="animated fadeInRightBig">In-line transparent cache for S3</p>
+            <p class="animated fadeInRightBig"> In-line transparent cache for S3 | Run S3 10X to 100X faster</p>
             <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">Start now</a>
           </div>
         </div>
@@ -60,42 +60,36 @@
 
         <div class="item wow fadeIn" style="background-image: url(images/slider/coin-toss.jpg)">">
                   <div class="caption">
-                    <h1 class="animated fadeInLeftBig"><span>Boost</span> your productivity for <span> less than one cent/hour</span></h1>
-                    <p class="animated fadeInRightBig">7-day free trial | simple installation via AWS marketplace</p>
+                    <h1 class="animated fadeInLeftBig"><span>Boost</span> productivity for <span> couple of cents per hour</span></h1>
+                    <p class="animated fadeInRightBig">Free trial | simple installation </p>
                     <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">Learn more</a>
                   </div>
         </div>
 
-        <div class="item" ">
+
+
+
+
+
+        <div class="item" >
               <div class="caption">
-                <h1 class="animated fadeInLeftBig">Speed up your <span>S3 access by 10X</span> or more!</h1>
-                <p class="animated fadeInRightBig">Docker private hub - Also on Google container registry (soon)</p>
+                <h1 class="animated fadeInLeftBig">Deploy as <span>Docker container</span> or from <span>linux RPM</span></h1>
+                <p class="animated fadeInRightBig">Docker private hub |  on Google container registry (soon)</p>
                 <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">See apps and services</a>
               </div>
             </div>
 
 
 
-
-        <div class="item" ">
-              <div class="caption">
-                <h1 class="animated fadeInLeftBig">Available as <span>Docker container</span> and <span>linux RPM</span> for deployment</h1>
-                <p class="animated fadeInRightBig">Docker private hub - Also on Google container registry (soon)</p>
-                <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">See apps and services</a>
-              </div>
-            </div>
-
-
-
-		<div class="item" ">
+		<div class="item" >
           <div class="caption">
-            <h1 class="animated fadeInLeftBig">Supports <span>write-through</span> and <span>write-back</span> modes</h1>
+            <h1 class="animated fadeInLeftBig">Choice of <span>write-through</span> and <span>write-back</span> modes</h1>
             <p class="animated fadeInRightBig">Caches S3 data inside working VPC for re-use - Speeds up writes - Efficient use of high-performance instance SSD</p>
             <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">See apps and services</a>
           </div>
         </div>
 
-        <div class="item" ">
+        <div class="item">
           <div class="caption">
             <h1 class="animated fadeInLeftBig">Easy <span>deloyment on Linux</span> in AWS, Azure, VMware or bare-metal</h1>
             <p class="animated fadeInRightBig">Caches S3 data inside  for re-use - Speeds up writes - Can use commodity servers - ARM version coming</p>
@@ -104,15 +98,21 @@
         </div>
 
 
-        <div class="item" ">
+        <div class="item">
           <div class="caption">
-            <h1 class="animated fadeInLeftBig">policy to <span>retain recent data in cache</span> by minutes to days</h1>
+            <h1 class="animated fadeInLeftBig">Simple policy to retain<span> hot data </span>in cache by <span>minutes/hours/days</span></h1>
             <p class="animated fadeInRightBig">Caches S3 data inside working VPC for re-use - Speeds up writes - Efficient use of high-performance instance SSD</p>
             <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">See apps and services</a>
           </div>
         </div>
 
-
+        <div class="item" style="background-image: url(images/slider/joey-kyber-132520.jpg)" >
+              <div class="caption">
+                <h1 class="animated fadeInLeftBig">Speed up your <span>S3 access by 10X</span> or more!</h1>
+                <p class="animated fadeInRightBig">Docker private hub - Also on Google container registry (soon)</p>
+                <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">See apps and services</a>
+              </div>
+            </div>
 
       </div>
        <a class="left-control" href="#home-slider" data-slide="prev"><i class="fa fa-angle-left"></i></a>
