rounging up on various versions and synch

--- a/index.html
+++ b/index.html
@@ -56,24 +56,16 @@
             <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">Start now</a>
           </div>
         </div>
-
-
         <div class="item wow fadeIn" style="background-image: url(images/slider/coin-toss.jpg)">">
                   <div class="caption">
-                    <h1 class="animated fadeInLeftBig"><span>Boost</span> productivity for <span> couple of cents per hour</span></h1>
+                    <h1 class="animated fadeInLeftBig"><span>Boost</span> productivity for just <span>a few cents an hour</span></h1>
                     <p class="animated fadeInRightBig">Free trial | simple installation </p>
                     <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">Learn more</a>
                   </div>
         </div>
-
-
-
-
-
-
-        <div class="item" >
+      <div class="item" >
               <div class="caption">
-                <h1 class="animated fadeInLeftBig">Deploy as <span>Docker container</span> or from <span>linux RPM</span></h1>
+                <h1 class="animated fadeInLeftBig">Deploy as <span>Docker container</span> or as <span>linux RPM</span></h1>
                 <p class="animated fadeInRightBig">Docker private hub |  on Google container registry (soon)</p>
                 <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">See apps and services</a>
               </div>
@@ -91,7 +83,7 @@
 
         <div class="item">
           <div class="caption">
-            <h1 class="animated fadeInLeftBig">Easy <span>deloyment on Linux</span> in AWS, Azure, VMware or bare-metal</h1>
+            <h1 class="animated fadeInLeftBig">Deploy in <spand>Docker/Kubernetes <span> in AWS, Azure or bare-metal</h1>
             <p class="animated fadeInRightBig">Caches S3 data inside  for re-use - Speeds up writes - Can use commodity servers - ARM version coming</p>
             <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">See apps and services</a>
           </div>
@@ -100,7 +92,7 @@
 
         <div class="item">
           <div class="caption">
-            <h1 class="animated fadeInLeftBig">Simple policy to retain<span> hot data </span>in cache by <span>minutes/hours/days</span></h1>
+            <h1 class="animated fadeInLeftBig">Simple rules retain<span> hot data </span>in cache over <span>minutes/hours/days</span></h1>
             <p class="animated fadeInRightBig">Caches S3 data inside working VPC for re-use - Speeds up writes - Efficient use of high-performance instance SSD</p>
             <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">See apps and services</a>
           </div>
