--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
-  <title>ZipCache&trade; | ZipCache(tm) by Barnstormers, LLC</title>
+  <title>ZipCache&trade; | by Barnstormers LLC</title>
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/animate.min.css" rel="stylesheet">
 
@@ -52,21 +52,21 @@
         	style="background-image: url(images/slider/arrows-aero1.jpg)">
           <div class="caption">
             <h1 class="animated fadeInLeftBig">Introducing <span>ZipCache&trade;</span> from Barnstormers</h1>
-            <p class="animated fadeInRightBig"> In-line transparent cache for S3 | Run S3 10X to 100X faster</p>
+            <p class="animated fadeInRightBig"> In-line transparent cache for S3 | Imporove  S3 IOPs/Bandwidth/Latency 10X to 100X faster</p>
             <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">Start now</a>
           </div>
         </div>
         <div class="item wow fadeIn" style="background-image: url(images/slider/coin-toss.jpg)">">
                   <div class="caption">
                     <h1 class="animated fadeInLeftBig"><span>Boost</span> productivity for just <span>a few cents an hour</span></h1>
-                    <p class="animated fadeInRightBig">Free trial | simple installation </p>
+                    <p class="animated fadeInRightBig">Free trial | simple installation | instant peroformance boost | simple setup</p>
                     <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">Learn more</a>
                   </div>
         </div>
       <div class="item" >
               <div class="caption">
                 <h1 class="animated fadeInLeftBig">Deploy as <span>Docker container</span> or as <span>linux RPM</span></h1>
-                <p class="animated fadeInRightBig">Docker private hub |  on Google container registry (soon)</p>
+                <p class="animated fadeInRightBig">Docker private hub |  AWS and Google container registry coming soon</p>
                 <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">See apps and services</a>
               </div>
             </div>
@@ -76,7 +76,7 @@
 		<div class="item" >
           <div class="caption">
             <h1 class="animated fadeInLeftBig">Choice of <span>write-through</span> and <span>write-back</span> modes</h1>
-            <p class="animated fadeInRightBig">Caches S3 data inside working VPC for re-use - Speeds up writes - Efficient use of high-performance instance SSD</p>
+            <p class="animated fadeInRightBig">Caches S3 data inside  VPC for re-use | Speeds up writes | Efficient use of high-performance instance SSD in AWS</p>
             <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">See apps and services</a>
           </div>
         </div>
@@ -84,7 +84,7 @@
         <div class="item">
           <div class="caption">
             <h1 class="animated fadeInLeftBig">Deploy in <spand>Docker/Kubernetes <span> in AWS, Azure or bare-metal</h1>
-            <p class="animated fadeInRightBig">Caches S3 data inside  for re-use - Speeds up writes - Can use commodity servers - ARM version coming</p>
+            <p class="animated fadeInRightBig">Supports X86 CPU instances | ARM version coming soon</p>
             <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">See apps and services</a>
           </div>
         </div>
@@ -93,7 +93,7 @@
         <div class="item">
           <div class="caption">
             <h1 class="animated fadeInLeftBig">Simple rules retain<span> hot data </span>in cache over <span>minutes/hours/days</span></h1>
-            <p class="animated fadeInRightBig">Caches S3 data inside working VPC for re-use - Speeds up writes - Efficient use of high-performance instance SSD</p>
+            <p class="animated fadeInRightBig">Manage long-tail data with policy based cache tiers</p>
             <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">See apps and services</a>
           </div>
         </div>
@@ -101,7 +101,7 @@
         <div class="item" style="background-image: url(images/slider/joey-kyber-132520.jpg)" >
               <div class="caption">
                 <h1 class="animated fadeInLeftBig">Speed up your <span>S3 access by 10X</span> or more!</h1>
-                <p class="animated fadeInRightBig">Docker private hub - Also on Google container registry (soon)</p>
+                <p class="animated fadeInRightBig">Deploy for cloud-native or onsite-to-cloud Configurations</p>
                 <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">See apps and services</a>
               </div>
             </div>
