--- a/index.html
+++ b/index.html
@@ -92,16 +92,16 @@
 
         <div class="item">
           <div class="caption">
-            <h1 class="animated fadeInLeftBig">Simple rules retain<span> hot data </span>in cache over <span>minutes/hours/days</span></h1>
-            <p class="animated fadeInRightBig">Manage long-tail data with policy based cache tiers</p>
+            <h1 class="animated fadeInLeftBig">retain<span> hot data </span>in cache for <span>minutes/hours/days</span></h1>
+            <p class="animated fadeInRightBig">Powerful policy controls  | Manage long-tail data with duratoin-based cached tiers</p>
             <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">See apps and services</a>
           </div>
         </div>
 
         <div class="item" style="background-image: url(images/slider/joey-kyber-132520.jpg)" >
               <div class="caption">
-                <h1 class="animated fadeInLeftBig">Speed up your <span>S3 access by 10X</span> or more!</h1>
-                <p class="animated fadeInRightBig">Deploy for cloud-native or onsite-to-cloud Configurations</p>
+                <h1 class="animated fadeInLeftBig">What WOULD <span>you Do ?</span>if your Se runs 10X</h1>
+                <p class="animated fadeInRightBig">cloud-native | onsite-to-cloud </p>
                 <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">See apps and services</a>
               </div>
             </div>
