--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 	    <li data-target="#home-slider" data-slide-to="3"></li>
 	    <li data-target="#home-slider" data-slide-to="4"></li>
       <li data-target="#home-slider" data-slide-to="5"></li>
+      <li data-target="#home-slider" data-slide-to="6"></li>
   	</ol>
 
       <div id="outercarousel" class="carousel-inner">
@@ -100,7 +101,7 @@
 
         <div class="item" style="background-image: url(images/slider/joey-kyber-132520.jpg)" >
               <div class="caption">
-                <h1 class="animated fadeInLeftBig">What WOULD <span>you Do ?</span>if your Se runs 10X</h1>
+                <h1 class="animated fadeInLeftBig">What <span>WOULD you Do ?</span>if your S3 runs <span>10X faster?</span></h1>
                 <p class="animated fadeInRightBig">cloud-native | onsite-to-cloud </p>
                 <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">See apps and services</a>
               </div>
