--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
         <div class="item" style="background-image: url(images/slider/joey-kyber-132520.jpg)" >
               <div class="caption">
-                <h1 class="animated fadeInLeftBig">What <span>WOULD you Do ?</span>if your S3 runs <span>10X faster?</span></h1>
+                <h1 class="animated fadeInLeftBig">What <span>WOULD you Do ?</span> if your S3 runs <span>10X faster?</span></h1>
                 <p class="animated fadeInRightBig">cloud-native | onsite-to-cloud </p>
                 <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">See apps and services</a>
               </div>
@@ -123,7 +123,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand " href="http://www.kodiakdata.com" style="background:#fff;   border-radius: 4px;">
+          <a class="navbar-brand " href="http://www.zipcache.com" style="background:#fff;   border-radius: 4px;">
 
             <img class="img-responsive " src="images/kodiak-logo.png" alt="logo"
             	 style=" display:inline; width: 100px; height:auto;
@@ -224,7 +224,7 @@
        <div class="heading " >
         <div class="row">
           <div class="text-center col-sm-8 col-sm-offset-2">
-            <h2>More Information from Kodiak Data</h2>
+            <h2>More Information from Barnstomers</h2>
  			<p></p><br>
 			<i class="fa fa-desktop fa-2x"></i><br><h3>Links, microsites and other collateral</h3>
        		</div>
