--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
         <div class="item" style="background-image: url(images/slider/joey-kyber-132520.jpg)" >
               <div class="caption">
-                <h1 class="animated fadeInLeftBig">How fast <span>will YOUR apps run if your </span>S3 runs 10X faster?</h1>
+                <h1 class="animated fadeInLeftBig">How fast <span>will YOUR apps run if your </span>S3 Ran 10X faster?</h1>
                 <p class="animated fadeInRightBig">cloud-native | onsite-to-cloud </p>
                 <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">See apps and services</a>
               </div>
@@ -132,12 +132,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-          </button>
+          </button>    <!--
           <a class="navbar-brand " href="http://www.zipcache.com" style="background:#fff;   border-radius: 4px;">
+            height:auto; margin-top:-10px;  margin-right:10px;  padding: 5px 5px 5px 5px;-->
+            <img class="img-responsive " src="images/speedmeter.png" alt="logo"
+            	 style=" display:inline; width: 75px;
 
-            <img class="img-responsive " src="images/kodiak-logo.png" alt="logo"
-            	 style=" display:inline; width: 100px; height:auto;
-            	 margin-left:auto; margin-right:10px; margin-top:-10px; padding: 5px 5px 5px 5px;">
+            	 margin-left:auto;">
           </a>
         </div>
         <div class="collapse navbar-collapse">
