added background photos

--- a/index.html
+++ b/index.html
@@ -55,21 +55,21 @@
         	style="background-image: url(images/slider/arrows-aero1.jpg)">
           <div class="caption">
             <h1 class="animated fadeInLeftBig">Introducing <span>ZipCache&trade;</span> from Barnstormers</h1>
-            <p class="animated fadeInRightBig"> In-line transparent cache for S3 | Imporove  S3 IOPs/Bandwidth/Latency 10X to 100X faster</p>
+            <p class="animated fadeInRightBig"> In-line transparent cache for S3 &nbsp; | &nbsp; Imporove  S3 IOPs/Bandwidth/Latency 10X to 100X faster</p>
             <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">Start now</a>
           </div>
         </div>
-        <div class="item wow fadeIn" style="background-image: url(images/slider/coin-toss.jpg)">">
+        <div class="item wow fadeIn" style="background-image: url(images/slider/coin-toss.jpg)">
                   <div class="caption">
                     <h1 class="animated fadeInLeftBig"><span>Boost</span> productivity for just <span>a few cents an hour</span></h1>
-                    <p class="animated fadeInRightBig">Free trial | simple installation | instant peroformance boost | simple setup</p>
+                    <p class="animated fadeInRightBig">Free trial &nbsp; | &nbsp; simple installation &nbsp; | &nbsp; instant peroformance boost &nbsp; | &nbsp; simple setup</p>
                     <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">Learn more</a>
                   </div>
         </div>
       <div class="item" >
               <div class="caption">
                 <h1 class="animated fadeInLeftBig">Docker<span> container</span> or <span>linux RPM</span> : Your choice!</h1>
-                <p class="animated fadeInRightBig">Docker private hub |  AWS and Google container registry coming soon</p>
+                <p class="animated fadeInRightBig">Docker private hub&nbsp; | &nbsp; AWS and Google container registry coming soon</p>
                 <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">See apps and services</a>
               </div>
             </div>
@@ -79,7 +79,7 @@
 		<div class="item" >
           <div class="caption">
             <h1 class="animated fadeInLeftBig">Choice of <span>write-through</span> and <span>write-back</span> modes</h1>
-            <p class="animated fadeInRightBig">Caches S3 data inside  VPC for re-use | Speeds up writes | Efficient use of high-performance instance SSD in AWS</p>
+            <p class="animated fadeInRightBig">Caches S3 data inside  VPC for re-use &nbsp; | &nbsp; Speeds up writes &nbsp; | &nbsp; Efficient use of high-performance instance SSD in AWS</p>
             <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">See apps and services</a>
           </div>
         </div>
@@ -88,23 +88,23 @@
         <div class="item">
           <div class="caption">
             <h1 class="animated fadeInLeftBig">retain<span> hot data </span>in cache for <span>minutes/hours/days</span></h1>
-            <p class="animated fadeInRightBig">Powerful policy controls  | Manage long-tail data with duratoin-based cached tiers</p>
+            <p class="animated fadeInRightBig">Powerful policy controls &nbsp; | &nbsp; Manage long-tail data with duratoin-based cached tiers</p>
             <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">See apps and services</a>
           </div>
         </div>
 
-        <div class="item">
+        <div class="item" style="background-image: url(images/slider/backlit-bird-clouds-755385.jpg)" center center>
           <div class="caption">
-            <h1 class="animated fadeInLeftBig">Speed up <span>Kubernetes</span> in AWS, Azure or bare-metal</h1>
-            <p class="animated fadeInRightBig">Supports X86 CPU instances | ARM version coming soon</p>
+            <h1 class="animated fadeInLeftBig">Soar with <span>Kubernetes</span> lifted by faster data</h1>
+            <p class="animated fadeInRightBig">Supports X86 CPU instances &nbsp; | &nbsp; ARM version coming soon</p>
             <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">See apps and services</a>
           </div>
         </div>
 
-        <div class="item">
+        <div class="item" style="background-image: url(images/slider/backlit-horse.jpg)">
           <div class="caption">
             <h1 class="animated fadeInLeftBig"><span>Speed up </span>Filer and Rsync backups <span>10X</span></h1>
-            <p class="animated fadeInRightBig">Onsite 'open-spec' applicances for ultr-fast object stores | Turbocharge your NAS backups with onsite Zipcache</p>
+            <p class="animated fadeInRightBig">Onsite 'open-spec' applicances for ultr-fast object stores&nbsp; | &nbsp; Turbocharge your NAS backups with onsite Zipcache</p>
             <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">See apps and services</a>
           </div>
         </div>
@@ -112,7 +112,7 @@
         <div class="item" style="background-image: url(images/slider/joey-kyber-132520.jpg)" >
               <div class="caption">
                 <h1 class="animated fadeInLeftBig">How fast <span>will YOUR apps run if your </span>S3 Ran 10X faster?</h1>
-                <p class="animated fadeInRightBig">cloud-native | onsite-to-cloud </p>
+                <p class="animated fadeInRightBig">cloud-native &nbsp; | &nbsp;onsite-to-cloud </p>
                 <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">See apps and services</a>
               </div>
             </div>
