--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
       <li data-target="#home-slider" data-slide-to="5"></li>
       <li data-target="#home-slider" data-slide-to="6"></li>
       <li data-target="#home-slider" data-slide-to="7"></li>
+      <li data-target="#home-slider" data-slide-to="8"></li>
   	</ol>
 
       <div id="outercarousel" class="carousel-inner">
@@ -59,10 +60,20 @@
             <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">Start now</a>
           </div>
         </div>
+
+        <div class="item wow fadeIn" >
+                  <div class="caption">
+                    <h1 class="animated fadeInLeftBig">A break-though <span>Inline Cache</span> that speeds Up S3 <span>by 100X</span></h1>
+                    <p class="animated fadeInRightBig">100X more IOPs &nbsp; | &nbsp; 100X lower latency &nbsp; | &nbsp; 10X+ higher Bandwidth &nbsp; | &nbsp; simple setup</p>
+                    <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">Learn more</a>
+                  </div>
+        </div>
+
+
         <div class="item wow fadeIn" style="background-image: url(images/slider/coin-toss.jpg)">
                   <div class="caption">
                     <h1 class="animated fadeInLeftBig"><span>Boost</span> productivity for just <span>a few cents an hour</span></h1>
-                    <p class="animated fadeInRightBig">Free trial &nbsp; | &nbsp; simple installation &nbsp; | &nbsp; instant peroformance boost &nbsp; | &nbsp; simple setup</p>
+                    <p class="animated fadeInRightBig">Free trial &nbsp; | &nbsp; simple installation &nbsp; | &nbsp; instant peroformance boost</p>
                     <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">Learn more</a>
                   </div>
         </div>
@@ -95,7 +106,7 @@
 
         <div class="item" style="background-image: url(images/slider/backlit-bird-clouds-755385.jpg)" center center>
           <div class="caption">
-            <h1 class="animated fadeInLeftBig">Soar with <span>Kubernetes</span> lifted by faster data</h1>
+            <h1 class="animated fadeInLeftBig">Soar <span>with Kubernetes,</span> lifted by <span>faster</span> data</h1>
             <p class="animated fadeInRightBig">Supports X86 CPU instances &nbsp; | &nbsp; ARM version coming soon</p>
             <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">See apps and services</a>
           </div>
@@ -132,13 +143,10 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-          </button>    <!--
+          </button>
           <a class="navbar-brand " href="http://www.zipcache.com" style="background:#fff;   border-radius: 4px;">
-            height:auto; margin-top:-10px;  margin-right:10px;  padding: 5px 5px 5px 5px;-->
-            <img class="img-responsive " src="images/speedmeter.png" alt="logo"
-            	 style=" display:inline; width: 75px;
-
-            	 margin-left:auto;">
+            <img class="img-responsive " src="images/GI-dial.png" alt="logo"
+            style=" display:inline; width: 50px; height:auto; margin-left:auto; margin-right:10px; margin-top:-10px; padding: 5px 5px 5px 5px;">
           </a>
         </div>
         <div class="collapse navbar-collapse">
