--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         <div class="item wow fadeIn" >
                   <div class="caption">
-                    <h1 class="animated fadeInLeftBig">A break-though <span>Inline Cache</span> that speeds Up S3 <span>by 100X</span></h1>
+                    <h1 class="animated fadeInLeftBig">speeds Up S3 access by <span>up to 100X</span></h1>
                     <p class="animated fadeInRightBig">100X more IOPs &nbsp; | &nbsp; 100X lower latency &nbsp; | &nbsp; 10X+ higher Bandwidth &nbsp; | &nbsp; simple setup</p>
                     <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">Learn more</a>
                   </div>
@@ -79,7 +79,7 @@
         </div>
       <div class="item" >
               <div class="caption">
-                <h1 class="animated fadeInLeftBig">Docker<span> container</span> or <span>linux RPM</span> : Your choice!</h1>
+                <h1 class="animated fadeInLeftBig">Docker<span> container</span>  with very small footprint</h1>
                 <p class="animated fadeInRightBig">Docker private hub&nbsp; | &nbsp; AWS and Google container registry coming soon</p>
                 <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">See apps and services</a>
               </div>
