updates on icons

--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
               <i class="fa fa-linux" aria-hidden="true"></i>
             </div>
             <div class="service-info">
-              <h3>ZipCache for Linux</h3>
-              <p>RPM package for Centos and Redhat</p>
+              <h3>ZipCache for AWS and VMware</h3>
+              <p>In marketplace. Coming soon.</p>
             </div>
           </div>
           <div class="col-sm-4 wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="650ms">
@@ -203,10 +203,10 @@
 
             <div class="col-sm-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="550ms">
             <div class="service-icon">
-              <i class="fa fa-handshake-o"></i>
+              <i class="fa fa-paper-plane"></i>
             </div>
             <div class="service-info">
-              <h3>Awesome Support</h3>
+              <h3>Simple deployment</h3>
               <p>Use a pre-configured version from our pubilc repo. Or use your own repository. Share your configuration with communities if you want.</p>
             </div>
           </div>
@@ -214,11 +214,11 @@
 
           <div class="col-sm-4 wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="750ms">
             <div class="service-icon">
-              <i class="fa fa-github"></i>
+              <i class="fa fa-slack"></i>
             </div>
             <div class="service-info">
-              <h3>Github Integration</h3>
-              <p>Our central and user repositories are on Github. You can customize the app-store inventory on Github just the way you want.</p>
+              <h3>Community on slack</h3>
+              <p>Follow the slack channel for updates and news</p>
             </div>
           </div>
           <div class="col-sm-4 wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="850ms">
@@ -226,8 +226,8 @@
               <i class="fa fa-code"></i>
             </div>
             <div class="service-info">
-              <h3>SaaS/App from YOUR code</h3>
-              <p>Make an App/Saas for your own project! Use it for your own deployment or share/sell it through Cloudworks.</p>
+              <h3>Free Trial</h3>
+              <p>Try it out from docker hub</p>
             </div>
           </div>
         </div>
